--- a/packages/amazon-cognito-identity-js/package.json
+++ b/packages/amazon-cognito-identity-js/package.json
@@ -64,7 +64,8 @@
   "dependencies": {
     "buffer": "4.9.1",
     "crypto-browserify": "1.0.9",
-    "js-cookie": "^2.1.4"
+    "js-cookie": "^2.1.4",
+    "node-fetch": "^2.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
